--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,38 @@
 [package]
-authors = ["frjnn <f.iannelli.francesco229@gmail.com>"]
-categories = ["algorithms", "science", "visualization"]
-description = "Exact and Barnes-Hut implementations of t-SNE."
-edition = "2021"
-exclude = ["/imgs"]
-keywords = ["tsne", "data-visualization", "data-analysis", "Barnes-Hut", "machine-learning"]
+name = "wasm-bhtsne"
+version = "0.1.0"
+authors = ["lv291 <baiunco291@proton.me>"]
+description = "Exact and Barnes-Hut implementations of t-SNE in wasm"
 license = "MIT"
-name = "bhtsne"
-readme = "README.md"
-repository = "https://github.com/frjnn/bhtsne"
-version = "0.5.2"
+repository = "https://github.com/Lv-291/wasm-bhtsne"
+edition = "2018"
+exclude = ["/imgs"]
+
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 [features]
-default = ["csv"]
+default = ["console_error_panic_hook", "csv"]
 
 [dependencies]
+wasm-bindgen = "0.2.84"
+getrandom = { version = "0.2.3", default-features=false, features=["js"] }
 csv = {version = "1.1.6", optional = true}
 num-traits = "0.2.15"
 rand = "0.8.5"
 rand_distr = "0.4.3"
 rayon = "1.5.3"
 
+# The `console_error_panic_hook` crate provides better debugging of panics by
+# logging them with `console.error`. This is great for development, but requires
+# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
+# code size when deploying.
+console_error_panic_hook = { version = "0.1.7", optional = true }
+
 [dev-dependencies]
+wasm-bindgen-test = "0.3.34"
 csv = "1.1.6"
+
+[profile.release]
+# Tell `rustc` to optimize for small code size.
+opt-level = "s"
