--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,18 +6,16 @@ description = "Exact and Barnes-Hut implementations of t-SNE in wasm"
 license = "MIT"
 repository = "https://github.com/Lv-291/wasm-bhtsne"
 edition = "2018"
-exclude = ["/imgs"]
 
 [lib]
 crate-type = ["cdylib", "rlib"]
 
 [features]
-default = ["console_error_panic_hook", "csv"]
+default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2.84"
 getrandom = { version = "0.2.3", default-features=false, features=["js"] }
-csv = {version = "1.1.6", optional = true}
 num-traits = "0.2.15"
 rand = "0.8.5"
 rand_distr = "0.4.3"
@@ -31,8 +29,8 @@ console_error_panic_hook = { version = "0.1.7", optional = true }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
-csv = "1.1.6"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
+
