JS matrix support added

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wasm-bhtsne"
-version = "0.1.4"
+version = "0.2.0"
 authors = ["lv291 <baiunco291@proton.me>"]
 description = "Exact and Barnes-Hut implementations of t-SNE in wasm"
 license = "MIT"
@@ -20,6 +20,7 @@ num-traits = "0.2.15"
 rand = "0.8.5"
 rand_distr = "0.4.3"
 rayon = "1.5.3"
+js-sys = "0.3.64"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
