iteration-feture implemented

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,5 +34,5 @@ wasm-bindgen-test = "0.3.34"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
-opt-level = "s"
+opt-level = 's'
 
