--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,9 +21,15 @@ num-traits = "0.2.15"
 rand = "0.8.5"
 rand_distr = "0.4.3"
 js-sys = "0.3.64"
+csv = { version = "1.3.0" , optional = true}
+
 
 [features]
 parallel = ["wasm-bindgen-rayon"]
+default = ["csv"]
+
+[dev-dependencies]
+csv = "1.1.6"
 
 [profile.release]
 opt-level = 's'
