--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wasm-bhtsne"
-version = "0.3.1"
+version = "1.0.0"
 authors = ["lv291 <baiunco291@proton.me>"]
 description = "Exact and Barnes-Hut implementations of t-SNE in wasm"
 license = "MIT"
@@ -20,16 +20,16 @@ getrandom = { version = "0.2.3", default-features=false, features=["js"] }
 num-traits = "0.2.15"
 rand = "0.8.5"
 rand_distr = "0.4.3"
-js-sys = "0.3.64"
-csv = { version = "1.3.0" , optional = true}
-
+serde = { version = "1.0", features = ["derive"] }
+serde-wasm-bindgen = "0.6.5"
+console_error_panic_hook = { version = "0.1.7", optional = true }
 
 [features]
 parallel = ["wasm-bindgen-rayon"]
-default = ["csv"]
 
 [dev-dependencies]
-csv = "1.1.6"
+wasm-bindgen-test = "0.3.42"
+
 
 [profile.release]
 opt-level = 's'
