--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,12 @@
 name = "wasm-bhtsne"
 version = "1.0.0"
 authors = ["lv291 <baiunco291@proton.me>"]
-description = "Exact and Barnes-Hut implementations of t-SNE in wasm"
+description = "Barnes-Hut implementations of t-SNE in wasm"
 license = "MIT"
 repository = "https://github.com/Lv-291/wasm-bhtsne"
-edition = "2018"
+edition = "2021"
+categories = ["algorithms", "science", "visualization"]
+keywords = ["tsne", "data-visualization", "webassembly", "wasm", "rust"]
 readme = "README.md"
 
 [lib]
