--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "private": true,
   "scripts": {
     "build:wasm-st": "wasm-pack build --target web",
-    "build:wasm-mt": "cross-env RUSTFLAGS=\"-C target-feature=+atomics,+bulk-memory,+mutable-globals\" rustup run nightly-2022-12-12 wasm-pack build --target web --out-dir pkg-parallel -- --features parallel -Z build-std=panic_abort,std",
+    "build:wasm-mt": "cross-env RUSTFLAGS=\"-C target-feature=+atomics,+bulk-memory,+mutable-globals\" rustup run nightly-2024-04-29 wasm-pack build --target web --out-dir pkg-parallel -- --features parallel -Z build-std=panic_abort,std",
     "build:wasm": "run-p build:wasm-st build:wasm-mt",
     "build": "npm run build:wasm && webpack build ./index.js --mode production -o dist --output-filename index.js && shx cp index.html dist/",
-    "test": "wasm-pack test --node --headless --firefox",
+    "test": "wasm-pack test --node --headless --chrome --firefox",
     "server": "serve --config ../serve.json dist/"
   },
   "devDependencies": {
