--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "private": true,
-  "scripts": {
-    "build:wasm-st": "wasm-pack build --target web",
-    "build:wasm-mt": "cross-env RUSTFLAGS=\"-C target-feature=+atomics,+bulk-memory,+mutable-globals\" rustup run nightly-2024-04-29 wasm-pack build --target web --out-dir pkg-parallel -- --features parallel -Z build-std=panic_abort,std",
-    "build:wasm": "run-p build:wasm-st build:wasm-mt",
-    "build": "npm run build:wasm && webpack build ./index.js --mode production -o dist --output-filename index.js && shx cp index.html dist/",
-    "test": "RUST_BACKTRACE=1 wasm-pack test --headless --chrome",
-    "server": "serve --config ../serve.json dist/"
+    "scripts": {
+      "build:wasm-st": "wasm-pack build --target web",
+      "build:wasm-mt": "cross-env RUSTFLAGS=\"-C target-feature=+atomics,+bulk-memory -Clink-arg=--shared-memory -Clink-arg=--max-memory=1073741824 -Clink-arg=--import-memory -Clink-arg=--export=__wasm_init_tls -Clink-arg=--export=__tls_size -Clink-arg=--export=__tls_align -Clink-arg=--export=__tls_base\" wasm-pack build --target web --out-dir pkg-parallel -- --features parallel -Z build-std=panic_abort,std",
+      "build:wasm": "run-p build:wasm-st build:wasm-mt",
+      "build": "npm run build:wasm && webpack build",
+      "serve": "npm run build && serve dist --config ../serve.json",
+      "test:parallel": "RUST_BACKTRACE=1 wasm-pack test --headless --chrome -- --features parallel",
+      "test": "RUST_BACKTRACE=1 wasm-pack test --headless --chrome"
+    },
+  "overrides": {
+    "axios": "^1.7.9"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "npm-run-all": "^4.1.5",
-    "shx": "^0.3.4",
-    "wasm-pack": "^0.12.1",
-    "webpack": "^5.89.0",
-    "serve": "^14.2.0",
-    "webpack-cli": "^5.1.4"
+    "copy-webpack-plugin": "^12.0.2",
+    "cross-env": "7.0.3",
+    "npm-run-all": "4.1.5",
+    "wasm-pack": "0.13.1",
+    "webpack": "5.97.1",
+    "webpack-cli": "6.0.1"
   },
   "dependencies": {
-    "wasm-feature-detect": "^1.6.1"
+    "wasm-feature-detect": "1.8.0"
   }
 }
